--- a/heartRain/css/style.css
+++ b/heartRain/css/style.css
@@ -5,15 +5,31 @@
 }
 
 body{
+  overflow-x: hidden;
+
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  height: 100%;
+
   background: rebeccapurple;
   font-size: 24px;
   line-height: 1.5;
 
   color: #fff;
   font-family: Roboto;
+}
+
+.heart{
+  font-size: 48px;
+
+  position: fixed;
+  bottom: -10vh;
+  animation: animHeart 3s ease forwards;
+}
+@keyframes animHeart{
+  0%{
+    transform: translateY(-125vh);
+    opacity: 0.3;
+  }
 }
